--- a/app/src/main/res/layout/activity_setting_info.xml
+++ b/app/src/main/res/layout/activity_setting_info.xml
@@ -13,7 +13,7 @@
             android:id="@+id/settingText"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="#F29661"
+            android:background="@color/colorBar"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="30dp"
@@ -59,7 +59,7 @@
                 android:id="@+id/home_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#F29661"
+                android:background="@color/colorBar"
                 android:text="홈"
                 android:textStyle="bold" />
 
@@ -75,7 +75,7 @@
                 android:id="@+id/refrigerator_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#F29661"
+                android:background="@color/colorBar"
                 android:text="냉장고"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -89,7 +89,7 @@
                 android:id="@+id/recipe_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#F29661"
+                android:background="@color/colorBar"
                 android:text="레시피"
                 android:textStyle="bold" />
 
@@ -104,7 +104,7 @@
                 android:id="@+id/setting_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#F29661"
+                android:background="@color/colorBar"
                 android:text="설정"
                 android:textStyle="bold" />
         </LinearLayout>
