--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#F29661</color>
+    <color name="colorPrimaryDark">#F29661</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorBackGround">#FFF7D4</color>
+    <color name="colorBar">#F29661</color>
 </resources>
